2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* www.gnome.org/start/2.20/Makefile.am:
	* www.gnome.org/start/2.20/press_release/: Removed, because we 
	plan to just use the introductory paragraphs of the release notes 
	instead.

2007-09-04  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/download.shtml:
	Update latest unstable version (2.11.92).

2007-09-03  Andreas Nilsson  <nisses.mail@home.se>

	* www.gnome.org/start/2.20/notes/docbook/C/figures/*.png:
	Fixed the size of a couple of screenshots, should now work better on devices with smaller screens, like the n800.

2007-09-02  Andreas Nilsson  <nisses.mail@home.se>

	* www.gnome.org/start/2.20/notes/docbook/C/figures/rnusers-tomboy-sync.png:
	Slightly larger screenshot of the tomboy sync feature.

2007-09-02  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/download.shtml:
	Update latest Evolution stable and unstable versions.

2007-08-19  Olav Vitters  <olav@bkor.dhs.org>

	* www.gnome.org/start/2.12/notes/gettext.py:
	* www.gnome.org/start/2.14/notes/gettext.py:
	* www.gnome.org/start/2.14/press_release/docbook.py:
	* www.gnome.org/start/2.14/press_release/gettext.py:
	* www.gnome.org/start/2.16/notes/gettext.py:
	* www.gnome.org/start/2.18/notes/gettext.py:
	* www.gnome.org/start/2.20/notes/gettext.py:
	* www.gnome.org/start/2.20/press_release/docbook.py:
	* www.gnome.org/start/2.20/press_release/gettext.py:
	* www.gnome.org/tour/docbook/gnome-doc-utils.make:
	* www.gnome.org/tour/gettext.py:

	Remove files obsoleted by move to RHEL5.

2007-07-31  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* www.gnome.org/start/2.20/Makefile.am:
	* www.gnome.org/start/2.20/index.wml:
	* www.gnome.org/start/2.20/notes/Makefile.am:
	* www.gnome.org/start/2.20/notes/docbook/Makefile.am:
	* www.gnome.org/start/2.20/notes/docbook/gnome-doc-utils.make:
	* www.gnome.org/start/2.20/notes/docbook/notes-C.omf: