@@ -1,9 +1,9 @@
-2007-09-05  Murray Cumming,,,  <murrayc@murrayc-desktop>
+2007-09-05  Murray Cumming  <murrayc@murrayc.com>
 
-	reviewed by: <delete if not using a buddy>
-
-	* Makefile.am:
-	* docbook/C/release-notes.xml:
+	* Makefile.am: Use the makefile improvement from 
+	Peter Newton in svn revision 4787, to avoid breaking the build 
+	with an error when a translator forgets to create a figures 
+	directory.
 
 2007-09-05  Murray Cumming  <murrayc@murrayc.com>
 
