@@ -1,3 +1,9 @@
+2007-09-05  Murray Cumming,,,  <murrayc@murrayc-desktop>
+
+	reviewed by: <delete if not using a buddy>
+
+	* Makefile.am:
+
 2007-09-05  Murray Cumming  <murrayc@murrayc.com>
 
 	* Makefile.am:
