@@ -1,5 +1,12 @@
 2007-09-05  Murray Cumming  <murrayc@murrayc.com>
 
+	* tour/Makefile.am: Use the makefile improvement from 
+	Peter Newton in svn revision 4787, to avoid breaking the build 
+	with an error when a translator forgets to create a figures 
+	directory.
+
+2007-09-05  Murray Cumming  <murrayc@murrayc.com>
+
 	* configure.in:
 	* www.gnome.org/start/2.20/Makefile.am:
 	* www.gnome.org/start/2.20/press_release/: Removed, because we 
